# psdk_ros2

.github/workflows/: ros_build.yaml  upload-debians.yaml
psdk_interfaces/: CMakeLists.txt
psdk_interfaces/msg/: WaypointV2.msg  WaypointV2Action.msg  WaypointV2ActionExecEvent.msg  WaypointV2Actuator.msg  WaypointV2AircraftControlFlyingParam.msg  WaypointV2AircraftControlParam.msg  WaypointV2AircraftControlRotateHeadingParam.msg  WaypointV2AssociateTriggerParam.msg  WaypointV2CGPoint.msg  WaypointV2CameraActuatorParam.msg  WaypointV2CameraFocalLengthParam.msg  WaypointV2CameraFocusParam.msg  WaypointV2GimbalActuatorParam.msg  WaypointV2GimbalRotation.msg  WaypointV2IntervalTriggerParam.msg  WaypointV2MissionEvent.msg  WaypointV2MissionExecEvent.msg  WaypointV2MissionSettings.msg  WaypointV2MissionState.msg  WaypointV2RelativePosition.msg  WaypointV2SampleReachPointTriggerParam.msg  WaypointV2TrajectoryTriggerParam.msg  WaypointV2Trigger.msg
psdk_interfaces/srv/: WaypointV2GetGlobalCruiseSpeed.srv  WaypointV2SetGlobalCruiseSpeed.srv  WaypointV2Stop.srv  WaypointV2UploadMission.srv
psdk_wrapper/: CMakeLists.txt
psdk_wrapper/include/psdk_wrapper/: psdk_wrapper.hpp
psdk_wrapper/include/psdk_wrapper/modules/: waypoint.hpp
psdk_wrapper/src/: psdk_wrapper.cpp
psdk_wrapper/src/modules/: gimbal.cpp  waypoint.cpp
